--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-globe-asia text-primary mb-3 sr-icon-4"></i>
               <h3 class="mb-3">Global</h3>
-              <p class="text-muted mb-0"> (아직 결정 못함))  </p>
+              <p class="text-muted mb-0"> 평소 대회나 공모전, 전문가 강연에 적극적으로 참여합니다. </p>
             </div>
           </div>
         </div>
