--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-globe-asia text-primary mb-3 sr-icon-4"></i>
-              <h3 class="mb-3">Global</h3>
+              <h3 class="mb-3">Globalize</h3>
               <p class="text-muted mb-0"> 평소 대회나 공모전, 전문가 강연에 적극적으로 참여합니다. </p>
             </div>
           </div>
@@ -230,7 +230,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4">Download at Google Drive!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <a class="btn btn-light btn-xl sr-button" href="https://drive.google.com/file/d/1Y7hY_KFO8thZULQq_7eUZjPnyQLs2QPa/view?usp=sharing">Download Now!</a>
       </div>
     </section>
 
