--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    간단한 콘솔게임
                   </div>
                 </div>
               </div>
@@ -157,7 +157,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    프로그래밍 동아리
                   </div>
                 </div>
               </div>
@@ -172,7 +172,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    SDL 밴드게임
                   </div>
                 </div>
               </div>
@@ -187,7 +187,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    주니어 소프트웨어 창작대회
                   </div>
                 </div>
               </div>
@@ -202,7 +202,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    유니티
                   </div>
                 </div>
               </div>
@@ -217,7 +217,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    비버 챌린지
                   </div>
                 </div>
               </div>
