--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Programming
                   </div>
                   <div class="project-name">
                     간단한 콘솔게임
@@ -154,7 +154,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Activity
                   </div>
                   <div class="project-name">
                     프로그래밍 동아리
@@ -169,7 +169,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Programming
                   </div>
                   <div class="project-name">
                     SDL 밴드게임
@@ -184,7 +184,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Activity
                   </div>
                   <div class="project-name">
                     주니어 소프트웨어 창작대회
@@ -199,7 +199,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Programming
                   </div>
                   <div class="project-name">
                     유니티
@@ -214,7 +214,7 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    Activity
                   </div>
                   <div class="project-name">
                     비버 챌린지
