--- a/index.html
+++ b/index.html
@@ -132,98 +132,149 @@
 
     <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Programming
-                  </div>
-                  <div class="project-name">
-                    간단한 콘솔게임
-                  </div>
-                </div>
+          <div class="row no-gutters popup-gallery">
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Programming
+                              </div>
+                              <div class="project-name">
+                                  간단한 콘솔게임
+                              </div>
+                          </div>
+                      </div>
+                  </a>
               </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Activity
-                  </div>
-                  <div class="project-name">
-                    프로그래밍 동아리
-                  </div>
-                </div>
+
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Activity
+                              </div>
+                              <div class="project-name">
+                                  비버 챌린지
+                              </div>
+                          </div>
+                      </div>
+                  </a>
               </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Programming
-                  </div>
-                  <div class="project-name">
-                    SDL 밴드게임
-                  </div>
-                </div>
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Programming
+                              </div>
+                              <div class="project-name">
+                                  유니티
+                              </div>
+                          </div>
+                      </div>
+                  </a>
               </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Activity
-                  </div>
-                  <div class="project-name">
-                    주니어 소프트웨어 창작대회
-                  </div>
-                </div>
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Activity
+                              </div>
+                              <div class="project-name">
+                                  프로그래밍 동아리
+                              </div>
+                          </div>
+                      </div>
+                  </a>
               </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Programming
-                  </div>
-                  <div class="project-name">
-                    유니티
-                  </div>
-                </div>
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Programming
+                              </div>
+                              <div class="project-name">
+                                  SDL 밴드게임
+                              </div>
+                          </div>
+                      </div>
+                  </a>
               </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Activity
-                  </div>
-                  <div class="project-name">
-                    비버 챌린지
-                  </div>
-                </div>
+
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Activity
+                              </div>
+                              <div class="project-name">
+                                  주니어 소프트웨어 창작대회
+                              </div>
+                          </div>
+                      </div>
+                  </a>
               </div>
-            </a>
+
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/7.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Activity & Programming
+                              </div>
+                              <div class="project-name">
+                                  이프 해커톤
+                              </div>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/8.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/8.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Activity & Programming
+                              </div>
+                              <div class="project-name">
+                                  준비중 (TODO: API 팀프로젝트 추가)
+                              </div>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                  <a class="portfolio-box" href="img/portfolio/fullsize/9.jpg">
+                      <img class="img-fluid" src="img/portfolio/thumbnails/9.jpg" alt="">
+                      <div class="portfolio-box-caption">
+                          <div class="portfolio-box-caption-content">
+                              <div class="project-category text-faded">
+                                  Activity & Programming
+                              </div>
+                              <div class="project-name">
+                                  준비중
+                              </div>
+                          </div>
+                      </div>
+                  </a>
+              </div>
+
+
           </div>
-        </div>
       </div>
     </section>
 
