--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">ABOUT</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4"> 더 나은 세상을 만들기 위해 프로그래머를 꿈꾸고 있는 학생입니다. <br> 지금은 서울디지텍고등학교에서 게임 프로그래밍을 전공하는 중입니다.
-              <br>'게임으로써 사회문제를 해결하는 방법', '일과 재미이론을 접목시켜 재밌게 일할 수 있는 방법' 처럼,<br> 미래에 기술과 사람의 삶을 조화롭게 만드는 방법에 대해 고민하고 있습니다. </p>
+            <p class="text-faded mb-4"> 더 나은 세상을 만들기 위해 프로그래머가 되기를 꿈꾸고 있는 학생입니다. <br>  서울디지텍고등학교에서 게임프로그래밍을 전공하는 중이며
+              <br>'게임으로써 사회문제를 해결하는 방법', '일과 재미이론을 접목시켜 재밌게 일할 수 있는 방법' 처럼,<br> 기술과 사람의 삶을 조화롭게 만드는 방법을 고민하고 있습니다. </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
@@ -102,7 +102,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-chalkboard-teacher text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">Projects</h3>
-              <p class="text-muted mb-0"> 게임제작 동아리의 회장을 맡으며, 부원들과 함께 다양한 프로젝트를 진행하고 있습니다. </p>
+              <p class="text-muted mb-0"> 프로그래밍 동아리의 초대회장으로서, 부원들과 함께 다양한 프로젝트를 진행하고 있습니다. </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -116,14 +116,14 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">Skills</h3>
-              <p class="text-muted mb-0"> 대표적으로 C, C++, SDL, API, Unity 사용이 가능합니다. </p>
+              <p class="text-muted mb-0"> 기초적인 C, C++ 과 더불어 SDL, API, DiretX. HTML과 CSS를 다룰 수 있습니다./p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-globe-asia text-primary mb-3 sr-icon-4"></i>
               <h3 class="mb-3">Globalize</h3>
-              <p class="text-muted mb-0"> 평소 대회나 공모전, 전문가 강연에 적극적으로 참여합니다. </p>
+              <p class="text-muted mb-0"> 대회와 공모전 참여, 기업 연수 등 폭 넓은 경험을 갖고 있습니다. </p>
             </div>
           </div>
         </div>
