프로젝트 간 순서 수정

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                   Activity & Programming
                               </div>
                               <div class="project-name">
-                                  이프 해커톤
+                                  여름방학 API 팀프로젝트
                               </div>
                           </div>
                       </div>
@@ -251,7 +251,7 @@
                                   Activity & Programming
                               </div>
                               <div class="project-name">
-                                  준비중 (TODO: API 팀프로젝트 추가)
+                                  2018 이프 해커톤
                               </div>
                           </div>
                       </div>
