--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">Skills</h3>
-              <p class="text-muted mb-0"> 기초적인 C, C++ 과 더불어 SDL, API, DiretX. HTML과 CSS를 다룰 수 있습니다./p>
+              <p class="text-muted mb-0"> 기초적인 C, C++ 과 더불어 SDL, API, DiretX. HTML과 CSS를 다룰 수 있습니다.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -263,10 +263,10 @@
                       <div class="portfolio-box-caption">
                           <div class="portfolio-box-caption-content">
                               <div class="project-category text-faded">
-                                  Activity & Programming
+                                  Activity
                               </div>
                               <div class="project-name">
-                                  준비중
+                                  SDHS 동아리 컨퍼런스
                               </div>
                           </div>
                       </div>
